// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`library --publishable should add build targets 1`] = `null`;

exports[`library --unit-test-runner none should not generate test configuration 1`] = `null`;

exports[`library nested should create a local tsconfig.json 1`] = `
{
  "compilerOptions": {
    "allowJs": true,
    "allowSyntheticDefaultImports": true,
    "esModuleInterop": false,
    "jsx": "preserve",
    "jsxImportSource": "vue",
    "moduleResolution": "node",
    "resolveJsonModule": true,
    "strict": true,
  },
  "extends": "../../tsconfig.base.json",
  "files": [],
  "include": [],
  "references": [
    {
      "path": "./tsconfig.lib.json",
    },
    {
      "path": "./tsconfig.spec.json",
    },
  ],
}
`;

exports[`library should add vite types to tsconfigs and generate correct vite.config.ts file 1`] = `null`;

exports[`library should add vue and vitest to package.json when non-buildable 1`] = `
{
  "dependencies": {
    "vue": "^3.5.13",
  },
  "devDependencies": {
    "@nx/cypress": "0.0.1",
    "@nx/eslint": "0.0.1",
    "@nx/eslint-plugin": "0.0.1",
    "@nx/js": "0.0.1",
    "@nx/rollup": "0.0.1",
    "@nx/vite": "0.0.1",
    "@nx/vitest": "0.0.1",
    "@nx/vue": "0.0.1",
    "@swc-node/register": "~1.11.1",
    "@swc/core": "~1.15.5",
    "@swc/helpers": "~0.5.18",
    "@types/node": "20.19.9",
    "@typescript-eslint/eslint-plugin": "^7.16.0",
    "@typescript-eslint/parser": "^7.16.0",
    "@vitejs/plugin-vue": "^6.0.1",
    "@vitest/coverage-v8": "^4.0.0",
    "@vitest/ui": "^4.0.8",
    "@vue/eslint-config-prettier": "^10.2.0",
    "@vue/eslint-config-typescript": "^11.0.3",
    "@vue/test-utils": "^2.4.6",
    "eslint": "~8.57.0",
    "eslint-config-prettier": "^10.0.0",
    "eslint-plugin-vue": "^9.16.1",
    "jsdom": "^27.1.0",
    "prettier": "~3.6.2",
    "typescript": "~5.9.2",
    "vite": "^7.0.0",
    "vitest": "^4.0.8",
    "vue-tsc": "^2.2.8",
  },
  "name": "@proj/source",
}
`;

exports[`library should add vue and vitest to package.json when non-buildable 2`] = `
"{
  "extends": "./tsconfig.json",
  "compilerOptions": {
    "outDir": "../dist/out-tsc",
    "types": ["vite/client"]
  },
  "exclude": [
    "src/**/__tests__/*",
    "src/**/*.spec.vue",
    "src/**/*.test.vue",
    "vite.config.ts",
    "vite.config.mts",
    "vitest.config.ts",
    "vitest.config.mts",
    "src/**/*.test.ts",
    "src/**/*.spec.ts",
    "src/**/*.test.tsx",
    "src/**/*.spec.tsx",
    "src/**/*.test.js",
    "src/**/*.spec.js",
    "src/**/*.test.jsx",
    "src/**/*.spec.jsx"
  ],
  "include": [
    "src/**/*.js",
    "src/**/*.jsx",
    "src/**/*.ts",
    "src/**/*.tsx",
    "src/**/*.vue"
  ]
}
"
`;

exports[`library should generate files 1`] = `
{
  "extends": [
    "plugin:vue/vue3-essential",
    "eslint:recommended",
    "@vue/eslint-config-typescript",
    "@vue/eslint-config-prettier/skip-formatting",
    "../.eslintrc.json",
  ],
  "ignorePatterns": [
    "!**/*",
    "**/vitest.config.*.timestamp*",
  ],
  "overrides": [
    {
      "files": [
        "*.ts",
        "*.tsx",
        "*.js",
        "*.jsx",
        "*.vue",
      ],
      "rules": {
        "vue/multi-word-component-names": "off",
      },
    },
  ],
}
`;

exports[`library should ignore test files in tsconfig.lib.json 1`] = `
[
  "src/**/__tests__/*",
  "src/**/*.spec.vue",
  "src/**/*.test.vue",
  "vite.config.ts",
  "vite.config.mts",
  "vitest.config.ts",
  "vitest.config.mts",
  "src/**/*.test.ts",
  "src/**/*.spec.ts",
  "src/**/*.test.tsx",
  "src/**/*.spec.tsx",
  "src/**/*.test.js",
  "src/**/*.spec.js",
  "src/**/*.test.jsx",
  "src/**/*.spec.jsx",
]
`;

exports[`library should support eslint flat config CJS 1`] = `
"const vue = require('eslint-plugin-vue');
const baseConfig = require('../eslint.config.cjs');

module.exports = [
  ...baseConfig,
  ...vue.configs['flat/recommended'],
  {
    files: ['**/*.vue'],
    languageOptions: {
      parserOptions: {
        parser: require('@typescript-eslint/parser'),
      },
    },
  },
  {
    files: ['**/*.ts', '**/*.tsx', '**/*.js', '**/*.jsx', '**/*.vue'],
    rules: {
      'vue/multi-word-component-names': 'off',
    },
  },
];
"
`;

exports[`library should support eslint flat config ESM 1`] = `
"import vue from 'eslint-plugin-vue';
import baseConfig from '../eslint.config.mjs';

export default [
  ...baseConfig,
  ...vue.configs['flat/recommended'],
  {
    files: ['**/*.vue'],
    languageOptions: {
      parserOptions: {
        parser: await import('@typescript-eslint/parser'),
      },
    },
  },
  {
    files: ['**/*.ts', '**/*.tsx', '**/*.js', '**/*.jsx', '**/*.vue'],
    rules: {
      'vue/multi-word-component-names': 'off',
    },
  },
];
"
`;
